test/types/records/ferguson/missing-functions/no-assign-error.good
no-assign-error.chpl:10: In function 'main':
no-assign-error.chpl:15: error: You can't assign an R
